--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "thesis-graphql-frontend",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
     "start": "ng serve --open --port 3600",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
