--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.4.0"
+    "graphql": "^15.4.0",
+    "graphql-tools": "^7.0.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
