--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "GraphQL server for a prototype application of the online store",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon index.ts"
+    "start": "nodemon index.ts",
+    "init-db": "node ./data/init-db.js"
   },
   "repository": {
     "type": "git",
@@ -25,11 +26,15 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.4.0",
-    "graphql-tools": "^7.0.4"
+    "graphql-tools": "^7.0.4",
+    "mongodb": "^3.6.4",
+    "rxjs": "^6.6.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/mongodb": "^3.6.8",
     "@types/node": "^14.14.16",
+    "excel": "^1.0.1",
     "graphql-tag": "^2.11.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
