--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.4.0",
     "graphql-tools": "^7.0.4",
+    "lodash": "^4.17.21",
     "mongodb": "^3.6.4",
     "rxjs": "^6.6.3"
   },
