--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/lodash": "^4.14.168",
     "@types/mongodb": "^3.6.8",
     "@types/node": "^14.14.16",
     "excel": "^1.0.1",
