--- a/backend/package.json
+++ b/backend/package.json
@@ -22,23 +22,25 @@
   },
   "homepage": "https://github.com/Poddixx/thesis-graphql#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.4.0",
     "graphql-tools": "^7.0.4",
     "graphql-upload": "^11.0.0",
     "jimp": "^0.16.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.4",
-    "resize-img": "^2.0.0",
     "rxjs": "^6.6.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.9",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.168",
     "@types/mongodb": "^3.6.8",
     "@types/node": "^14.14.16",
-    "excel": "^1.0.1",
     "graphql-tag": "^2.11.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
